# solana-rewards-distributor

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
example_data/: eligible_user_pk-example.json  merkle_proof-example.json  merkle_root-example.json
programs/rewards-distributor/: Cargo.toml
programs/rewards-distributor/src/: error.rs  lib.rs
programs/rewards-distributor/src/instructions/: claim.rs  initialize.rs  mod.rs  set_admin.rs  set_updater.rs  shutdown.rs  update_root.rs
programs/rewards-distributor/src/state/: claimed_rewards.rs  distributor_config.rs  mod.rs
tests/: RewardsDistributor.Admin.spec.ts  RewardsDistributor.Claim.spec.ts  RewardsDistributor.Shutdown.spec.ts  RewardsDistributor.spec.ts
tests/shared/: consts.ts  transactions.ts  utils.ts
