[package]
name = "rewards-distributor"
version = "0.1.0"
description = "Program for rewards distribution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rewards_distributor"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
